--- a/helloworld/pom.xml
+++ b/helloworld/pom.xml
@@ -97,6 +97,18 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.ocpsoft.rewrite</groupId>
+            <artifactId>rewrite-servlet</artifactId>
+            <version>3.0.0.Alpha10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.ocpsoft.logging</groupId>
+            <artifactId>logging-adapter-jboss</artifactId>
+            <version>1.0.4.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
